tests/baselines/reference/parameterPropertyOutsideConstructor(strict=true).errors.txt
parameterPropertyOutsideConstructor.ts(2,9): error TS2369: A parameter property is only allowed in a constructor implementation.
parameterPropertyOutsideConstructor.ts(2,9): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== parameterPropertyOutsideConstructor.ts (2 errors) ====
    class C {
        foo(public x) {
            ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
            ~~~~~~~~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        }
    }